[package]
name = "jobcannond"
version = "0.1.0"
authors = ["Kevin de Berk <kevin.deberk@messagebird.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1" }
async-std = { version = "1.12", features=["unstable", "attributes"] }
futures = "0.3"
