[package]
name = "jobcannond"
version = "0.1.0"
authors = ["Kevin de Berk <kevin.deberk@messagebird.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1" }
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"

[dev-dependencies]
regex = { version = "1" }
